--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,18 @@ body {
 .right-table-container {height:340px}
 .right-table-footer {background:#EEE; position: absolute; display:table; height: 40px; top: 397px; width: 100%; vertical-align: middle;}
 .right-table-footer-content {margin:6px; vertical-align: middle;}
-.right-table-footer-icon-container {display:table-cell; width: 70px}
+.right-table-footer-icon-container {display:table-cell; width: 90px}
 .right-table-process-prompt {display: table-cell; width: 90px; margin:5px; vertical-align: middle;}
 .right-data-panel {height:400px; overflow:auto; max-width: 280px; word-wrap: break-word;}
 .MuiTableRow-root-148 {height:28px}
+.timechart-title {color: #29ABE2;; font-size:26px; padding-top:15px; text-align:center}
+.timechart-table {border-collapse:collapse; margin-top: 50px; border-top: 1px solid #CCC}
+.timechart-row {border-bottom:1px solid #CCC}
+.timechart-row:hover {background-color:#DDD; opacity: 0.5;}
+.timechart-stepcol {width:20%; border-bottom: 1px solid #CCC; padding:5px;}
+.timechart-timecol {min-width1:1px; border-bottom: 1px solid #CCC; background-color: #29ABE2; opacity:0.5}
+.timechart-padcol {border-bottom: 1px solid #CCC;}
+.timechart-gridparent {position:relative; height:100%}
+.timechart-gridelement {position:absolute; top:0px; left:0px; width:100%; height:100%}
+.timechart-tooltip-container {position:absolute; top:100px; display:none; left:230px; padding:10px; border-radius: 5px; border:1px solid #CCC; background-color: #EEE;}
+.timechart-grid-row:hover {background-color: #EEE; opacity:0.6}
