--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -44,3 +44,4 @@ body {
 .timechart-gridelement {position:absolute; top:0px; left:0px; width:100%; height:100%}
 .timechart-tooltip-container {position:absolute; top:100px; display:none; left:230px; padding:10px; border-radius: 5px; border:1px solid #CCC; background-color: #EEE;}
 .timechart-grid-row:hover {background-color: #EEE; opacity:0.6}
+.swagger-link {cursor:pointer; color:#29ABE2; margin-left:20px}
