--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,7 @@ body {
 .graph-container {height:100%; flex-grow: 1; min-width: 0; min-height: 1000px; min-width:100%; background:url('../images/grid.png');}
 .right-panel {width:300px; position:absolute; left:calc(100% - 600px); top:0px; background: #FFF; height:100%;
   border-left:1px solid #CCC}
-.info-container {display:table; margin:15px}
+.info-container {display:table; margin:7px}
 .info-prompt {display:table-cell; margin:5px; vertical-align: middle;}
 .info-prompt-block {display:inline-block; margin:5px; vertical-align: middle;}
 .info-data {display:table-cell; margin:5px 5px 5px 15px; font-weight:bold; vertical-align: middle}
@@ -22,15 +22,15 @@ body {
 .response-data {width:280px; height:400px}
 .filter-link {text-decoration:underline; color:#66F; cursor:pointer}
 .port-icon {width:24px; height:24px; margin-left:5px; cursor:pointer}
-.small-icon {width:24px; height:24px; margin-left:5px; cursor:pointer; display:inline-block}
+.small-icon {width:16px; height:16px; margin-left:5px; cursor:pointer; display:inline-block; transition: transform 0.3s ease;}
 .icon-disabled {opacity :0.2; cursor:default}
 .selected-row {background:#EEE}
 .info-container-right-footer {display:table; width:100%; margin:10px 0px 10px 0px}
 .right-table-container {height:340px}
 .right-table-footer {background:#EEE; position: absolute; display:table; height: 40px; top: 397px; width: 100%; vertical-align: middle;}
 .right-table-footer-content {margin:6px; vertical-align: middle;}
-.right-table-footer-icon-container {display:table-cell; width: 90px}
-.right-table-process-prompt {display: table-cell; width: 90px; margin:5px; vertical-align: middle;}
+.right-table-footer-icon-container {display:table-cell; width: 65px}
+.right-table-process-prompt {display: table-cell; width: 90px; margin:5px; vertical-align: top;}
 .right-data-panel {height:400px; overflow:auto; max-width: 280px; word-wrap: break-word;}
 .MuiTableRow-root-148 {height:28px}
 .timechart-title {color: #29ABE2;; font-size:26px; padding-top:15px; text-align:center}
@@ -45,3 +45,12 @@ body {
 .timechart-tooltip-container {position:absolute; top:100px; display:none; left:230px; padding:10px; border-radius: 5px; border:1px solid #CCC; background-color: #EEE;}
 .timechart-grid-row:hover {background-color: #EEE; opacity:0.6}
 .swagger-link {cursor:pointer; color:#29ABE2; margin-left:20px}
+.keyscomp {display:flex}
+.keyscomp-text {width:80%; display:inline-block}
+.keyscomp-arrow {width:19%; display:inline-block}
+.icon-rotate-90 {-webkit-transform: rotate(90deg); transition: transform 0.3s ease;}
+.keyscomp-detail-panel {transition: transform 0.3s ease;}
+.keyscomp-detail-panel-hidden {display:none; transition: transform 0.3s ease;}
+.keyscomp-detail-text {width:40%; margin:3px; font-weight: normal;}
+.keyscomp-icon-container {display:flex; width:26px;}
+.keyscomp-icon {width:12px; height:12px; margin-left:5px; cursor:pointer; display:inline-block;}
