--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,6 +12,7 @@ body {
   .icon-toolbar {width: 100%; border-bottom:1px solid #EEE; height:35px}
   .icon-toolbar-icon {margin:8px; opacity:0.5; cursor:pointer}
   .icon-toolbar-icon:hover {opacity:1}
+  .icon-toolbar-icon-disabled {margin:8px; opacity:0.3}
   
   .logo {position:absolute; top:0px}
   .marker-canvas {position:absolute; width:30px; height:30px; top:0px; left:0px}
@@ -19,9 +20,9 @@ body {
     border:2px solid #666; background-color: #009900; width:20px; height:20px;
     position:absolute; border-radius1: 50%; opacity1: 0.5}
   // .marker-basic {cursor:pointer; opacity: 0.9}
-  .marker-basic { -webkit-transition: background-color 100ms linear; cursor:pointer; opacity: 0.9; text-align: center; 
+  .marker-basic { -webkit-transition: opacity 1s ease-in-out; cursor:pointer; opacity: 0.9; text-align: center; 
       height: 25px; width: 25px; background-color: $primary-colour; border-radius: 50%; display: inline-block;}
-  .marker-basic-highlight {background-color: #AFA; border: 5px solid #6A6; top:-5px; left:-5px; position: absolute}
+  .marker-basic-highlight {opacity:0.1; border: 5px solid #666; top:-5px; left:-5px; position: absolute}
   .marker-basic-selected {border: 5px solid #FAA; top:-5px; left:-5px; position: absolute}
   .marker-basic-selected-process {background-color: #A33; }
   .marker-basic-text {padding-top:6px; color: #FFF; font-family:$font-stack; font-size:12px}
@@ -46,7 +47,7 @@ body {
   .right-table-footer-content {margin:6px; vertical-align: middle;}
   .right-table-footer-icon-container {display:table-cell; width: 65px}
   .right-table-process-prompt {display: table-cell; color:#FFF; width: 90px; margin:5px; vertical-align: top;}
-  .right-data-panel {font-family:$font-stack; color:$font-colour; height:100%; overflow:auto; word-wrap: break-word;}
+  .right-data-panel {font-family:$font-stack; color:$font-colour; height:100%; overflow-y:scroll; word-wrap: break-word; height:100%}
   .MuiTableRow-root-148 {height:28px}
   .timechart-title {color: #29ABE2;; font-size:26px; padding-top:15px; text-align:center}
   .timechart-table {border-collapse:collapse; margin-top: 50px; border-top: 1px solid #CCC}
